--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "coordtransform": "^2.1.2",
     "core-js": "^3.36.0",
     "regenerator-runtime": "^0.14.1"
   },
